--- a/index.html
+++ b/index.html
@@ -12,31 +12,24 @@
   <link rel="stylesheet" href="css/styles-merged.css">
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="stylesheet" href="css/custom.css">
-
   <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
       <script src="js/vendor/respond.min.js"></script>
     <![endif]-->
 </head>
-
 <body>
-
   <!-- START: header -->
-
   <div class="probootstrap-loader"></div>
-
   <header role="banner" class="probootstrap-header">
     <div class="container">
       <a href="index.html" class="probootstrap-logo">BIZA Travel</a>
-
       <a href="#" class="probootstrap-burger-menu visible-xs"><i>Menu</i></a>
       <div class="mobile-menu-overlay"></div>
-
       <nav role="navigation" class="probootstrap-nav hidden-xs">
         <ul class="probootstrap-main-nav">
           <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="portfolio.html">Holiday Packets</a></li>
-          <li><a href="services.html">Testimoni</a></li>
+          <li><a href="paket.html">Holiday Packets</a></li>
+          <li><a href="testimoni.html">Testimoni</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
