--- a/paket.html
+++ b/paket.html
@@ -3,15 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>uiCookies:Connect &mdash; Free Bootstrap Theme, Free Responsive Bootstrap Website Template</title>
-    <meta name="description" content="Free Bootstrap Theme by uicookies.com">
-    <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
-
+    <title>BIZA Travel - Paket Liburan</title>
+    <meta name="description" content="BIZA Travel - Travel Murah Malang">
+    <meta name="keywords" content="BIZA, BIZA Travel, Travel murah, travel malang">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
     <link rel="stylesheet" href="css/styles-merged.css">
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="css/custom.css">
-
     <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
       <script src="js/vendor/respond.min.js"></script>
@@ -25,24 +23,22 @@
 
   <header role="banner" class="probootstrap-header">
     <div class="container">
-        <a href="index.html" class="probootstrap-logo">Connect</a>
-
+        <a href="index.html" class="probootstrap-logo">BIZA Travel</a>
         <a href="#" class="probootstrap-burger-menu visible-xs" ><i>Menu</i></a>
         <div class="mobile-menu-overlay"></div>
-
         <nav role="navigation" class="probootstrap-nav hidden-xs">
           <ul class="probootstrap-main-nav">
             <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="portfolio.html">Holiday Packets</a></li>
-            <li><a href="services.html">Services</a></li>
+            <li class="active"><a href="paket.html">Holiday Packets</a></li>
+            <li><a href="testimoni.html">Testimoni</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
           </ul>
           <div class="extra-text visible-xs">
             <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
             <h5>Address</h5>
-            <p>198 West 21th Street, Suite 721 New York NY 10016</p>
-            <h5>Connect</h5>
+            <p>Kadaka Street No 25, Malang, East Java</p>
+            <h5>BIZa Travel</h5>
             <ul class="social-buttons">
               <li><a href="#"><i class="icon-twitter"></i></a></li>
               <li><a href="#"><i class="icon-facebook2"></i></a></li>
@@ -53,22 +49,27 @@
     </div>
   </header>
   <!-- END: header -->
-
   <div class="probootstrap-main">
-
     <section class="probootstrap-section-half">
-      <div class="probootstrap-image probootstrap-animate" data-animate-effect="fadeIn" style="background-image: url(img/image_1.jpg)"></div>
+      <div class="probootstrap-image probootstrap-animate" data-animate-effect="fadeIn" style="background-image: url(img/gb2_paralayang.jpg)"></div>
       <div class="probootstrap-text">
         <div class="probootstrap-inner probootstrap-animate">
-          <h1 class="heading">Pouring Milk In Hand</h1>
-          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-          <p><a href="single-page.html" class="btn btn-primary">View Case Study</a></p>
+          <h1 class="heading">Paket Wisata Malang 3 Hari 2 Malam</h1>
+      <p>Malang, dengan berbagai macam surga wisata yang ada sering menjadi salah satu destinasi kota wisata yang
+paling sering dikunjungi oleh wisatawan lokal maupun asing. Memang tak bisa dipungkiri karena obyek wisata
+di Malang sangat banyak dan cocok sekali untuk masyarakat Indonesia maupun luar negeri baik itu balita,
+anak-anak, remaja dan orang tua semua obyek wisata tersebut rata-rata ada di Malang mulai dari Wisata Alam
+seperti Pantai dan Gunung atau mungkin Wisata bermain dan belajar untuk anak-anak dan keluarga.
+<div>Paket wisata malang 3 hari 2 malam ini sangat cocok untuk satu rombongan keluarga yang merencanakan liburan di
+kota Malang karena obyek wisata yang kita siapkan untuk paket wisata malang batu 3d 2n ini memang sangat cocok
+untuk semua umur.</p>
+          <p><a href="single-page.html" class="btn btn-primary">💬 Pesan Paket Wisata Sekarang !</a></p>
         </div>
       </div>
     </section>
     <!-- END section -->
     <section class="probootstrap-section-half probootstrap-reverse">
-      <div class="probootstrap-image probootstrap-animate"  data-animate-effect="fadeIn" style="background-image: url(img/image_2.jpg)"></div>
+      <div class="probootstrap-image probootstrap-animate"  data-animate-effect="fadeIn" style="background-image: url(img/gb2_bromo.jpg)"></div>
       <div class="probootstrap-text">
         <div class="probootstrap-inner probootstrap-animate">
           <h1 class="heading">Ice Cream Sweetness</h1>
@@ -79,7 +80,7 @@
     </section>
     <!-- END section -->
     <section class="probootstrap-section-half">
-      <div class="probootstrap-image probootstrap-animate" data-animate-effect="fadeIn" style="background-image: url(img/image_3.jpg)"></div>
+      <div class="probootstrap-image probootstrap-animate" data-animate-effect="fadeIn" style="background-image: url(img/gb2_x.jpg)"></div>
       <div class="probootstrap-text">
         <div class="probootstrap-inner probootstrap-animate">
           <h1 class="heading">Baloon on the Chair</h1>
