--- a/testimoni.html
+++ b/testimoni.html
@@ -1,43 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>BIZA Travel</title>
-  <meta name="description" content="Free Bootstrap Theme by uicookies.com">
+  <meta name="description" content="Free Bootstrap Theme byx uicookies.com">
   <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
-
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
   <link rel="stylesheet" href="css/styles-merged.css">
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="stylesheet" href="css/custom.css">
   <link rel="stylesheet" href="css/custom-bariq.css">
-
   <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
       <script src="js/vendor/respond.min.js"></script>
     <![endif]-->
 </head>
-
 <body>
-
   <!-- START: header -->
-
   <div class="probootstrap-loader"></div>
-
   <header role="banner" class="probootstrap-header">
     <div class="container">
       <a href="index.html" class="probootstrap-logo">BIZA Travel</a>
-
       <a href="#" class="probootstrap-burger-menu visible-xs"><i>Menu</i></a>
       <div class="mobile-menu-overlay"></div>
-
       <nav role="navigation" class="probootstrap-nav hidden-xs">
         <ul class="probootstrap-main-nav">
           <li><a href="index.html">Home</a></li>
-          <li><a href="portfolio.html">Holiday Packets</a></li>
-          <li class="active"><a href="services.html">Testimoni</a></li>
+          <li><a href="paket.html">Holiday Packets</a></li>
+          <li class="active"><a href="testimoni.html">Testimoni</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
@@ -56,7 +47,6 @@
     </div>
   </header>
   <!-- END: header -->
-
   <div class="probootstrap-main">
 
     <section class="probootstrap-section-half probootstrap-no-hover">
