Halaman Paket Done
Tolong untuk 2 kolom paket yang scrollable dijadiin ID, dipisahin dari kelas yang udah ada, biar 2 kolom itu aja yang scrollable, kolom di halaman lain nggak, thank you

--- a/_pgbackup/paket_1543882188.html
+++ b/_pgbackup/paket_1543882188.html
@@ -74,8 +74,10 @@ paling sering dikunjungi oleh wisatawan lokal maupun asing. Memang tak bisa dipu
 di Malang sangat banyak dan cocok sekali untuk masyarakat Indonesia maupun luar negeri baik itu balita,
 anak-anak, remaja dan orang tua semua obyek wisata tersebut rata-rata ada di Malang mulai dari Wisata Alam
 seperti Pantai dan Gunung atau mungkin Wisata bermain dan belajar untuk anak-anak dan keluarga.</p>
-                        <div>
-                            <p><a href="single-page.html" class="btn btn-primary">Rencanakan perjalanan liburan anda !</a></p>
+                        <div>Paket wisata malang 3 hari 2 malam ini sangat cocok untuk satu rombongan keluarga yang merencanakan liburan di
+                            kota Malang karena obyek wisata yang kita siapkan untuk paket wisata malang batu 3d 2n ini memang sangat cocok
+                            untuk semua umur.
+                            <p><a href="single-page.html" class="btn btn-primary">💬 Pesan Paket Wista Sekarang !</a></p> 
                         </div>                         
                     </div>                     
             </section>             
@@ -85,7 +87,7 @@ seperti Pantai dan Gunung atau mungkin Wisata bermain dan belajar untuk anak-ana
                 <div class="probootstrap-image probootstrap-animate" data-animate-effect="fadeIn" style="background-image: url(img/gb2_x.jpg)"></div>                 
                 <div class="probootstrap-text border-success">
                     <div class="probootstrap-inner probootstrap-animate fadeInUp probootstrap-animated">
-                        <h1 class="heading">Paket 3 Hari 2 Malam</h1> 
+                        <h1 class="heading">Paket</h1> 
                         <p><em>Jadwal paket wisata malang batu 3D 2N ini adalah jadwal standard tour yang sistemnya fleksibel dan tidak mengikat, dan bisa di custom lagi sesuai kebutuhan. Silahkan konsultasikan perjalanan wisata kalian dengan CS kami, GRATIS!</em></p>
                         <h3>Hari Ke-1</h3>
                         <ul>
@@ -188,83 +190,19 @@ seperti Pantai dan Gunung atau mungkin Wisata bermain dan belajar untuk anak-ana
                             <li>
                                 <strong>12.00 :</strong> Drop Off (Finish).
                             </li>
-                        </ul>
-                        <h2>Harga Paket Wisata Malang Batu 3 Hari 2 Malam</h2>
-                        <p></p>
-                        <table id="tablepress-8">
-                            <thead>
-                                <tr>
-                                    <th>Harga</th>
-                                    <th>Jumlah</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>Rp. 1.200.000/Px</td>
-                                    <td>&gt;50 Px</td>
-                                </tr>
-                                <tr>
-                                    <td>Rp. 1.275.000/Px</td>
-                                    <td>&gt;30 Px</td>
-                                </tr>
-                                <tr>
-                                    <td>Rp. 1.350.000/Px</td>
-                                    <td>&gt;15 Px</td>
-                                </tr>
-                                <tr>
-                                    <td>Rp. 1.400.000/Px</td>
-                                    <td>&gt;10 Px</td>
-                                </tr>
-                                <tr>
-                                    <td>Rp. 1.525.000/Px</td>
-                                    <td>5 Px</td>
-                                </tr>
-                                <tr>
-                                    <td>Rp. 1.650.000/Px&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</td>
-                                    <td>4 Px</td>
-                                </tr>
-                                <tr>
-                                    <td>Rp. 1.800.000/Px</td>
-                                    <td>3 Px</td>
-                                </tr>
-                                <tr>
-                                    <td>Rp. 2.250.000/Px</td>
-                                    <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;2 Px</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <p></p>
-                        <p>*Harga diatas tidak berlaku untuk high sessions dan hari besar lainya.<br>*Lebih dari 5 orang bisa hubungi CS kami.<br>*Untuk informasi yang lebih jelas lagi mengenai <a href="https://abimanyutour.id/paket-wisata-malang-batu-3-hari-2-malam/">paket wisata malang batu 3 hari 2 malam</a> bisa hubungi CS kami.</p>
-                        <p>*Untuk tujuan wisata ke pantai malang informasi lebih lengkap mengenai jadwal dan harga bisa langsung hubungi CS kami.<br></p> 
+                        </ul>                         
                         <p><a href="single-page.html" class="btn btn-primary">PESAN PAKET WISATA SEKARANG !</a></p>
                     </div>
                 </div>                 
             </section>             
             <!-- END section -->             
             <section class="probootstrap-section-half probootstrap-reverse"> 
-                <div class="probootstrap-image probootstrap-animate" data-animate-effect="fadeIn" style="background-image: url(img/gb2_bromo.jpg);"></div>                 
+                <div class="probootstrap-image probootstrap-animate" data-animate-effect="fadeIn" style="background-image: url(img/MUSEUM-ANGKUT-BATU.jpeg)"></div>                 
                 <div class="probootstrap-text"> 
-                    <div class="probootstrap-inner probootstrap-animate">
-                        <h1 class="heading">Paket Wisata Bromo Midnight (Private Trip)<br></h1>
-                        <p><a href="https://abimanyutravel.id/">Paket Wisata Bromo Midnight</a> sangat cocok bagi Anda hanya memiliki waktu liburan tidak lama, karena paket wisata bromo malang midnight hanya menghabiskan waktu selama satu hari saja untuk menikmati tour ke Gunung Bromo. Akan tetapi dengan paket wisata tour bromo midnight malang ini Anda sudah bisa berlibur ke <a href="https://id.wikipedia.org/wiki/Gunung_Bromo">Gunung Bromo</a> untuk menikmati beragam tujuan wisata yang ada di kawasan gunung Bromo seperti cantiknya pemandangan Sunrise dari puncak pendakian Gunung Bromo, Kawah Bromo, Bukit Teletubbies, Padang Savana, dan Pasir Berbisik semua bisa ditempuh dan dinikmati dalam satu perjalanan.</p>
-                        <p>Penjemputan dimulai pada jam 23.00-24.00 WIB baik itu dari kota Malang, Kota Batu, kota Surabaya sesuai permintaan alamat penjemputan di 3 area kota tersebut.</p>
-                        <p>Untuk penjemputan bisa juga di tempat umum seperti Stasiun/Bandara/Terminal bus atau juga hotel tempat para peserta bermalam yang akan langsung kami antar untuk menuju ke kawasan TNB.</p>
-                        <p>Setelah sampai di kawasan Gunung Bromo biasanya di Pos Tosari, untuk selanjutnya akan dilanjutkan dengan naik Jeep Bromo 4wd untuk menikmati keindahan Sunrise (Matahari Terbit) dan juga keindahan kawah gunung Bromo serta tempat wisata yang indah di sekitaran gunung Bromo seperti Padang Savana, Bukit Teletubbies, Pasir Berbisik dan Kawah Bromo.</p>
-                        <h3>Rundown (Itinerary) Paket Wisata Bromo Midnight Tour</h3>
-                        <ul>
-                            <li>00.00 – 00.30 : Penjemputan di tempat/alamat Malang/Batu/Surabaya.</li>
-                            <li>00.30 – 03.00 : Perjalanan ke Transit Point untuk Over Jeep.</li>
-                            <li>03.00 – 04.00 : Perjalanan ke Bukit Penanjakan (Bukit Cinta *Opsional)</li>
-                            <li>04.00 – 06.00 : Bukit Penanjakan / Bukit Cinta Gunung Bromo (Menikmati Indahnya Sunrise).</li>
-                            <li>06.00 – 07.00 : Padang Savana (Bukit Teletubbies) dan Pasir Berbisik.</li>
-                            <li>08.00 – 10.00 : Kawah Bromo dan Pura Luhur Poten.</li>
-                            <li>10.00 – 11.00 : Perjalanan kembali ke Transit Point.</li>
-                            <li>11.00 – 14.00 : Perjalanan kembali ke Malang/Batu/Surabaya.</li>
-                            <li>14.00 : Finish.</li>
-                        </ul>
-                        <p><b>Harga dimulai dari Rp. 300.000/px</b></p>
-                        <p></p> 
-                        <p><a href="single-page.html" class="btn btn-primary">PESAN PAKET WISATA SEKARANG !</a></p>
+                    <div class="probootstrap-inner probootstrap-animate"> 
+                        <h1 class="heading">Pink Lips in the Hole</h1> 
+                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p> 
+                        <p><a href="single-page.html" class="btn btn-primary">View Case Study</a></p> 
                     </div>                     
                 </div>                 
             </section>             
