--- a/_pgbackup/paket_1543883116.html
+++ b/_pgbackup/paket_1543883116.html
@@ -75,7 +75,7 @@ di Malang sangat banyak dan cocok sekali untuk masyarakat Indonesia maupun luar 
 anak-anak, remaja dan orang tua semua obyek wisata tersebut rata-rata ada di Malang mulai dari Wisata Alam
 seperti Pantai dan Gunung atau mungkin Wisata bermain dan belajar untuk anak-anak dan keluarga.</p>
                         <div>
-                            <p><a href="single-page.html" class="btn btn-primary">Rencanakan perjalanan liburan anda !</a></p>
+                            <p><a href="single-page.html" class="btn btn-primary">💬 Pesan Paket Wista Sekarang !</a></p>
                         </div>                         
                     </div>                     
             </section>             
@@ -264,7 +264,7 @@ seperti Pantai dan Gunung atau mungkin Wisata bermain dan belajar untuk anak-ana
                         </ul>
                         <p><b>Harga dimulai dari Rp. 300.000/px</b></p>
                         <p></p> 
-                        <p><a href="single-page.html" class="btn btn-primary">PESAN PAKET WISATA SEKARANG !</a></p>
+                        <p><a href="single-page.html" class="btn btn-primary">View Case Study</a></p>
                     </div>                     
                 </div>                 
             </section>             
